[gd_scene load_steps=11 format=3 uid="uid://l3egkl0fu464"]

[ext_resource type="Texture2D" uid="uid://bxttc8xs055h5" path="res://Assets/Sprites/4 Icons/Coin.png" id="1_anb74"]
[ext_resource type="Script" uid="uid://btl7jhsbfgu4u" path="res://Scenes/GameUi/GameUi.gd" id="1_anolp"]
[ext_resource type="FontFile" uid="uid://ry05acjk8rq2" path="res://Assets/Font/Pixellari.ttf" id="2_anolp"]
[ext_resource type="LabelSettings" uid="uid://cl7x4ofkylolx" path="res://Resources/TextWhiteMd.tres" id="4_5hvfd"]
[ext_resource type="Texture2D" uid="uid://bqesj7hu2n574" path="res://Assets/Sprites/6 UI/Sprites/UI_Flat_Bar10a.png" id="5_cfi2h"]
[ext_resource type="Texture2D" uid="uid://bf4g8dwfymau1" path="res://Assets/Sprites/6 UI/Sprites/UI_Flat_Bar01a.png" id="6_cfi2h"]
[ext_resource type="LabelSettings" uid="uid://dlo0lpsc0nd5g" path="res://Resources/ButtonTextWhiteMd.tres" id="7_e55ej"]
[ext_resource type="PackedScene" uid="uid://e7430yu1ixgq" path="res://Scenes/NextStepIcon/NextStepIcon.tscn" id="7_ldyld"]

[sub_resource type="LabelSettings" id="LabelSettings_tt7lr"]
font = ExtResource("2_anolp")
font_size = 200
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e55ej"]
font = ExtResource("2_anolp")
font_size = 112
outline_size = 18
outline_color = Color(0, 0, 0, 1)
shadow_size = 17
shadow_color = Color(0, 0, 0, 0.823529)
shadow_offset = Vector2(6, 6)

[node name="Game UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_anolp")

[node name="CoinImage" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 38.0
offset_bottom = 51.0
texture = ExtResource("1_anb74")
stretch_mode = 3

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 44.0
offset_top = 16.0
offset_right = 694.0
offset_bottom = 216.0
scale = Vector2(0.178899, 0.178899)
text = "000000"
label_settings = SubResource("LabelSettings_tt7lr")
vertical_alignment = 1

[node name="NextStepIcon" parent="." instance=ExtResource("7_ldyld")]
layout_mode = 1
offset_left = 181.0
offset_top = -149.0
offset_right = 221.0
offset_bottom = -109.0

[node name="HintBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0889156, 0.0954596, 0.921569)

[node name="HintTitle" type="Label" parent="HintBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -86.0
offset_right = 1484.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.234334, 0.234334)
text = "How to craft:"
label_settings = SubResource("LabelSettings_e55ej")

[node name="HintLabel" type="Label" parent="HintBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -47.0
offset_right = 1485.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.155939, 0.155939)
text = "1. Hit Ore Pile and catch the ore
2. Heat it in the Furnace
3. Make your weapon on the anvil
4. Cool the weapon in the water barrel
5. Place it on the weapon rack to sell"
label_settings = ExtResource("4_5hvfd")

[node name="HideHintButton" type="TextureButton" parent="HintBackground"]
layout_mode = 1
offset_left = 150.0
offset_top = 190.0
offset_right = 210.0
offset_bottom = 208.0
scale = Vector2(1.28116, 1.28116)
texture_normal = ExtResource("5_cfi2h")
texture_pressed = ExtResource("6_cfi2h")
stretch_mode = 0

[node name="Label" type="Label" parent="HintBackground/HideHintButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -5.0
offset_right = 222.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.123, 0.123)
text = "Got it!"
label_settings = ExtResource("7_e55ej")

[connection signal="pressed" from="HintBackground/HideHintButton" to="." method="_on_texture_button_pressed"]
